recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:11: error: not found: value lenght
	avance(lenght/2)
               ^