recursion.lessons.recursion.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
if(level==0){
	avance(length)
	droite(60)
	avance(length)
	droite(60)
	avance(length)
	droite(60)
}else{
	sierpinski(level-1, length/2)
	avance(lenght/2)
	sierpinski(level-1, length/2)
	droite(60)
	avance(length/2)
	sierpinski(level-1, length/2)
	droite(60)
	avance(length/2)
	droite(60)
	avance(length/2)
	droite(60)
}
}
